@@ -1,3 +1,9 @@
+2007-02-07  Benoît Dejean  <benoit@placenet.org>
+
+	* src/sysinfo.cpp:
+	
+	Try to get hostname in a smarter way.
+
 2007-02-05  Daniel Nylander <po@danielnylander.se>
 
 	* help/sv/sv.po: Added Swedish translation.
